[Website] Update @thomasdavis Twitter account in about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -76,7 +76,7 @@
               <img style="width: 50px; height: 50px;" alt="" src="/img/thomas.jpg" />
               Thomas Davis
             </a>
-            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/neutralthoughts" data-show-count="false" data-lang="en">Follow @neutralthoughts</a>
+            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/ajaxdavis" data-show-count="false" data-lang="en">Follow @neutralthoughts</a>
           </td>
         </tr>
       </tbody>
