[Website] clean up highlight.js (fixed #72) (#186)

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -155,3 +155,5 @@ p > code.hljs {
     </div>
   </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js" integrity="sha256-fkOAs5tViC8MpG+5VCOqdlSpLL8htz4mdL2VZlWGoMA=" crossorigin="anonymous"></script>
+<script defer>hljs.initHighlightingOnLoad();</script>
