--- a/templates/library.html
+++ b/templates/library.html
@@ -24,7 +24,7 @@
         {{#library.urls}}
         &nbsp;<li class="label label-default label-highlight"><a href="{{url}}" title="Link to {{library.name}}'s source code page.">repository</a></li>
         {{/library.urls}}
-        {{#licenses}}<li class="label label-default label-highlight"><a href="{{url}}" title="License info of {{library.name}}, click to see datail.">{{type}} license</a>&nbsp;</li>{{/licenses}}
+        {{#licenses}}<li class="label label-default label-highlight"><a href="{{url}}" title="License info of {{library.name}}, click to see detail.">{{type}} license</a>&nbsp;</li>{{/licenses}}
       </p>
       <p>{{library.description}}</p>
       <em>{{library.keywords}}</em>
