--- a/templates/api.html
+++ b/templates/api.html
@@ -19,7 +19,7 @@
         </h3>
         <div class="api">
           <p>
-            You can query cdnjs via our API as belows
+            You can query cdnjs via our API as below
             <br><br>
             Without any query parameters it will return the name and main file URL of every library on cdnjs:<br><br>
             <code>https://api.cdnjs.com/libraries</code>
