--- a/templates/api.html
+++ b/templates/api.html
@@ -40,7 +40,7 @@
       CDNJS
     </a>(except auto-update config, we'll only return the auto-update type (currently <code>npm or git</code>)
     <br><br>
-    The API will return the maximum results by default (1000), but you can limit these the "hitsPerPage" query
+    The API will return the maximum results by default (1000), but you can limit these with the "hitsPerPage" query
     <br><br>
     <code>https://api.cdnjs.com/libraries?search=[query]&hitsPerPage=10</code>
     <br><br>
