[Website] Update footer message

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -117,7 +117,7 @@
     <footer class="footer">
       <div class="container">
         <p class="text-muted">
-          Follow <a href="https://github.com/PeterDaveHello"><i class="fa fa-github"></i></a> <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=peterdavehello&tw_p=followbutton"><i class="fa fa-twitter"></i></a> <a href="https://www.peterdavehello.org">@Peter Dave Hello</a> and <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=cdnjs&tw_p=followbutton"><i class="fa fa-twitter"></i>@cdnjs</a> on GitHub and twitter to get the latest news about cdnjs!
+          Donate CDNJS $5 on <a href="https://www.bountysource.com/teams/cdnjs" target="_blank">Bountysource</a> or become a contributor on <a href="https://github.com/cdnjs/cdnjs" target="_blank"><i class="fa fa-github"></i> GitHub</a> to make the project better and better!
         </p>
       </div>
     </footer>
