[Website] Remove type="text/javascript" attribute in <script>

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -153,7 +153,7 @@ p > code.hljs {
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <div id="disqus_thread"></div>
-      <script type="text/javascript">
+      <script>
           /* * * CONFIGURATION VARIABLES * * */
           var disqus_shortname = '{{disqus_shortname}}';
           var disqus_url = '{{{disqus_url}}}';
