--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<script src="//m.servedby-buysellads.com/monetization.js" type="text/javascript"></script>
+<script src="//m.servedby-buysellads.com/monetization.js"></script>
 <script>
 (function(){
   _bsa.init('default', 'CVAI653I', 'placement:demo', {
