--- a/templates/layout.html
+++ b/templates/layout.html
@@ -133,7 +133,7 @@
   <script src="/js/main.js" defer></script>
 
     <script src="//static.getclicky.com/js" defer></script>
-    <script type="text/javascript" defer>try{clicky.init(66376315);}catch(err){}</script>
+    <script defer>try{clicky.init(66376315);}catch(err){}</script>
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66376315ns.gif" /></p></noscript>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
