--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -59,7 +59,7 @@
 </style>
 
 
-<script src="//m.servedby-buysellads.com/monetization.js" type="text/javascript"></script>
+<script src="//m.servedby-buysellads.com/monetization.js"></script>
 <script>
   (function(){
     _bsa.init('default', 'CVAI653I', 'placement:demo', {
