--- a/templates/library.html
+++ b/templates/library.html
@@ -35,7 +35,7 @@
       {{/library.gratipay}}
         </div>
         <div class="col-md-4">
-          <script type="text/javascript" src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=cdnjscom" id="_carbonads_js" defer></script>
+          <script src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=cdnjscom" id="_carbonads_js" defer></script>
         </div>
       </div>
        <div class="input-group version-dropdown">
