--- a/templates/newsfeed_item.html
+++ b/templates/newsfeed_item.html
@@ -16,7 +16,7 @@
 <div style="clear: both;"></div>
 <hr />
 <div id="disqus_thread"></div>
-<script type="text/javascript">
+<script>
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     {{#hasUser}}
     var disqus_config = function () {
