[Website] Update notfound.html template

--- a/templates/notfound.html
+++ b/templates/notfound.html
@@ -1,10 +1,11 @@
 <div class="container">
   <div class="row">
-  <div class="col-lg-12">
+  <div class="col-lg-12" style="margin-top: 110px;">
     <h3>Sorry, this page isn't available</h3>
-    <p>The link you followed may be broken, or the page may have been removed.</p>
-    <p>If you believe this was an error, report the bug on our <a target="_blank" href="https://github.com/cdnjs/new-website/issues">issues page</a>.</p>
-    <p>In the meantime, try browsing through our menu up top or refreshing.</p>
+    <br />
+    <h4>The link you followed may be broken, or the page may have been removed.</h4>
+    <h4>If you believe this was an error, report the bug on our <a target="_blank" href="https://github.com/cdnjs/new-website/issues[website%20404%20not%20found]">issues page</a>.</h4>
+    <h4>In the meantime, try browsing through our menu up top or refreshing.</h4>
   </div>
   </div>
 </div>
