[Website] Fix author Twitter link feature

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -81,7 +81,7 @@ p > code.hljs {
           <a href="{{author.homepage}}">{{author.homepage}}</a><br />
 
           {{#author.twitter}}
-            <i class="fa fa-twitter"></i>
+            <a href="https://twitter.com/{{author.twitter}}"><i class="fa fa-twitter"></i></a>
           {{/author.twitter}}
           </p>
         </div>
