[Website] Support author GitHub link in tutorial

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -83,6 +83,9 @@ p > code.hljs {
           {{#author.twitter}}
             <a href="https://twitter.com/{{author.twitter}}" target="_blank"><i class="fa fa-twitter"></i></a>
           {{/author.twitter}}
+          {{#author.github}}
+            <a href="https://github.com/{{author.github}}" target="_blank"><i class="fa fa-github"></i></a>
+          {{/author.github}}
           </p>
         </div>
       </div>
