[Website] Support author Facebook link in tutorial

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -86,6 +86,9 @@ p > code.hljs {
           {{#author.github}}
             <a href="https://github.com/{{author.github}}" target="_blank"><i class="fa fa-github"></i></a>
           {{/author.github}}
+          {{#author.facebook}}
+            <a href="https://facebook.com/{{author.facebook}}" target="_blank"><i class="fa fa-facebook"></i></a>
+          {{#author.facebook}}
           </p>
         </div>
       </div>
