[Website] Fix tutorial author facebook syntax

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -88,7 +88,7 @@ p > code.hljs {
           {{/author.github}}
           {{#author.facebook}}
             <a href="https://facebook.com/{{author.facebook}}" target="_blank"><i class="fa fa-facebook"></i></a>
-          {{#author.facebook}}
+          {{/author.facebook}}
           </p>
         </div>
       </div>
