[Website] Add support for author gratipay, medium & reddit link/info

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -83,12 +83,21 @@ p > code.hljs {
           {{#author.twitter}}
             <a href="https://twitter.com/{{author.twitter}}" target="_blank"><i class="fa fa-twitter"></i></a>
           {{/author.twitter}}
+          {{#author.gratipay}}
+            <a href="https://gratipay.com/~{{author.gratipay}}" target="_blank"><i class="fa fa-gratipay"></i></a>
+          {{/author.gratipay}}
           {{#author.github}}
             <a href="https://github.com/{{author.github}}" target="_blank"><i class="fa fa-github"></i></a>
           {{/author.github}}
+          {{#author.medium}}
+            <a href="https://medium.com/@{{author.medium}}" target="_blank"><i class="fa fa-medium"></i></a>
+          {{/author.medium}}
           {{#author.facebook}}
             <a href="https://facebook.com/{{author.facebook}}" target="_blank"><i class="fa fa-facebook"></i></a>
           {{/author.facebook}}
+          {{#author.reddit}}
+            <a href="https://reddit.com/user/{{author.reddit}}" target="_blank"><i class="fa fa-reddit"></i></a>
+          {{/author.reddit}}
           </p>
         </div>
       </div>
