--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -2,6 +2,7 @@
 
     <div class="col-md-12">
         <input id="search-box" placeholder="Search from {{libCount}} libraries with {{libVerCount}} different versions ..." type="text" class="form-control col-md-7 search" aria-controls="example">
+		<p class="text-inline verbiage-text"><span id="nb-hits-field"></span> results found(in <span id="nb-hits-time"></span> seconds)</p>
         <div class="text-right text-muted">Realtime search by <a href="http://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search"><img src="/img/algolia.svg" style="height: 20px; width:75;" /></a></div>
     </div>
 </div>
