--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
       <div class="packages-table-container" style="display: none;">
         <div id="default_demo"></div>
 
-        <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
+        <table style="margin-top: 10px; margin-bottom: 80px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
               <th>Library</th>
