--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -10,7 +10,7 @@
     <div id="default_demo"></div>
     <div>
       <div class="packages-table-container">
-        <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
+        <table style="margin-top: 10px; margin-bottom: 80px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
               <th>Library</th>
