--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <div>
       <div class="packages-table-container" style="display: none;">
         <div id="default_demo"></div>
-        <p>Total: <span id="nb-hits-field" class="major-color">0</span> results founded.</p>
+        <p>Total: <span id="nb-hits-field" class="major-color">0</span> result(s) found.</p>
         <table style="margin-top: 10px; margin-bottom: 80px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
