More https instead of http protocol

--- a/templates/about.html
+++ b/templates/about.html
@@ -102,7 +102,7 @@
             <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/drewfreyling" data-show-count="false" data-lang="en">Follow @drewfreyling</a>
           </td>
           <td style="width: 300px;">
-            <a href="http://petecooper.org" target="_blank">
+            <a href="https://petecooper.org" target="_blank">
               <img style="width: 50px; height: 50px;" alt="Pete Cooper" src="/img/pete.jpg" />
               Pete Cooper
             </a>
