--- a/templates/news.html
+++ b/templates/news.html
@@ -3,7 +3,7 @@
   <div class="col-md-6">
     <p style="margin-top: 6px;">
     
-      <span>Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html">Google CDN</a><span>&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank">Microsoft runs their own CDN</a>.
+      <span>Everyone loves the&nbsp;</span><a target="_blank" href="https://code.google.com/apis/libraries/devguide.html">Google CDN</a><span>&nbsp;right? Even&nbsp;</span><a href="https://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank">Microsoft runs their own CDN</a>.
       <br><span>The problem is, they only host the most popular libraries.</span>
       <br><span>We host it all - JavaScript, CSS, SWF, images, etc!</span>
       <br><span>Join us now on GitHub!</span><br>
@@ -13,7 +13,7 @@
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=fork&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       </p><p>
       <span>Supports http/https/spdy, we encourage always using <strong>https</strong>!
-      <br /><span>Currently used by ~530,000 websites worldwide, </span><a href="http://trends.builtwith.com/cdn/CDN-JS">see more</a>.
+      <br /><span>Currently used by ~530,000 websites worldwide, </span><a href="https://trends.builtwith.com/cdn/CDN-JS">see more</a>.
     </p>
 
     <div class="logged-in" style="display: none;">
@@ -28,7 +28,7 @@
     <h3>Sponsors</h3>
     <div class="sponsors">
 
-<a href="http://cloudflare.com">
+<a href="https://cloudflare.com">
   <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
 </a>
 <br />
@@ -41,7 +41,7 @@
       </a>
       <p>Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
       <!--
-                            <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
+                            <em><img src="https://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
     </div>
     <h3>Media</h3>
     <iframe width="100%" height="720" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0&hd=1&vq=hd720" frameborder="0" allowfullscreen></iframe>
@@ -57,14 +57,14 @@
       <tbody>
         <tr>
           <td style="width:300px;">
-            <a href="http://github.com/ryankirkman">
+            <a href="https://github.com/ryankirkman">
               <img style="width: 50px; height: 50px;" src="/img/ryan.jpg" />
               Ryan Kirkman
             </a>
             <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/ryan_kirkman" data-show-count="false" data-lang="en">Follow @ryan_kirkman</a>
           </td>
           <td style="width: 300px;">
-            <a href="http://github.com/thomasdavis">
+            <a href="https://github.com/thomasdavis">
               <img style="width: 50px; height: 50px;" alt="" src="/img/thomas.jpg" />
               Thomas Davis
             </a>
@@ -94,7 +94,7 @@
             <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/drewfreyling" data-show-count="false" data-lang="en">Follow @drewfreyling</a>
           </td>
           <td style="width: 300px;">
-            <a href="http://petecooper.org">
+            <a href="https://petecooper.org">
               <img style="width: 50px; height: 50px;" alt="Pete Cooper" src="/img/pete.jpg" />
               Pete Cooper
             </a>
