--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
           </thead>
           <tbody>
             {{#favorites}}
-            <tr itemscope itemtype="http://schema.org/SoftwareApplication" data-library-name="{{name}}" data-library-keywords="{{keywords}}" id="{{id}}" class="odd gradeX normal">
+            <tr itemscope itemtype="https://schema.org/SoftwareApplication" data-library-name="{{name}}" data-library-keywords="{{keywords}}" id="{{id}}" class="odd gradeX normal">
               <td style="white-space: nowrap;">
                 <a itemprop="name" href="/libraries/{{name}}">
                     {{name}}
