--- a/templates/layout.html
+++ b/templates/layout.html
@@ -156,9 +156,9 @@ $('.post').show();
 <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollup/2.4.1/jquery.scrollUp.min.js" integrity="sha256-t2YrqZoTLq/Qt8zIw0BMiuRC2X5+a3O7PODU8RwoyYw=" crossorigin="anonymous"></script>
 
 <script defer>hljs.initHighlightingOnLoad();</script>
-<div itemscope itemtype="http://schema.org/WebSite" style="display:none">
+<div itemscope itemtype="https://schema.org/WebSite" style="display:none">
   <meta itemprop="url" content="https://cdnjs.com/"/>
-  <form itemprop="potentialAction" itemscope itemtype="http://schema.org/SearchAction">
+  <form itemprop="potentialAction" itemscope itemtype="https://schema.org/SearchAction">
     <meta itemprop="target" content="https://cdnjs.com/#q={search_term_string}"/>
     <input itemprop="query-input" type="text" name="q" required/>
     <input type="submit"/>
