--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -2,7 +2,7 @@
 
     <div class="col-md-12">
         <input id="search-box" placeholder="Search from {{libCount}} libraries with {{libVerCount}} different versions ..." type="text" class="form-control col-md-7 search" aria-controls="example">
-        <div class="text-right text-muted">Realtime search by <a href="http://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search"><img src="/img/algolia.svg" style="height: 20px; width:75;" /></a></div>
+        <div class="text-right text-muted">Realtime search by <a href="https://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search"><img src="/img/algolia.svg" style="height: 20px; width:75;" /></a></div>
     </div>
 </div>
 <div class="container">
@@ -20,7 +20,7 @@
           </thead>
           <tbody>
             {{#packages}}
-              <tr itemscope itemtype="http://schema.org/SoftwareApplication" data-library-name="{{name}}" data-library-keywords="{{keywords}}" id="{{id}}" class="odd gradeX normal">
+              <tr itemscope itemtype="https://schema.org/SoftwareApplication" data-library-name="{{name}}" data-library-keywords="{{keywords}}" id="{{id}}" class="odd gradeX normal">
                 <td style="white-space: nowrap;">
                   <a itemprop="name" href="/libraries/{{name}}">
                     {{name}}
