[Website] Display search processing time elapsed

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <div>
       <div class="packages-table-container" style="display: none;">
         <div id="default_demo"></div>
-        <p style="display: none;">Total: <span id="nb-hits-field" class="major-color">0</span> result(s) found.</p>
+        <p style="display: none;">Found <span id="nb-hits-field" class="major-color">0</span> libraries in <span id="processingTimeMS">0</span>ms.</p>
         <table style="margin-top: 10px; margin-bottom: 80px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
